--- a/to-do-app/node-app-frontend/package.json
+++ b/to-do-app/node-app-frontend/package.json
@@ -1,28 +1,61 @@
 {
-  "name": "to-do-app-frontend",
-  "version": "1.0.0",
-  "description": "\"node.js project including backend express.js API and react client\"",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "devapp1": "nodemon server.js",
-    "devapp2": "nodemon ../node-app/server.js",
-    "dev": "concurrently \"npm run devapp1\" \"npm run devapp2\""
-  },
-  "author": "Jiri Pokorny",
-  "license": "ISC",
-  "devDependencies": {
-    "concurrently": "^8.2.2"
-  },
+  "name": "node-app-frontend",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
+    "@date-io/moment": "^1.3.13",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/pickers": "^3.3.11",
+    "@mui/icons-material": "^5.15.16",
+    "@mui/material": "^5.15.16",
+    "@mui/x-date-pickers": "^7.3.1",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
-    "express": "^4.19.2",
-    "nodemon": "^3.1.0",
+    "concurrently": "^8.2.2",
+    "install": "^0.13.0",
+    "mdb-react-ui-kit": "^8.0.0",
+    "moment": "^2.30.1",
+    "npm": "^10.7.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.1.1",
+    "react-router-dom": "^6.23.0",
+    "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^1.3.0",
-    "serve-favicon": "^2.5.0",
-    "styled-components": "^6.1.8"
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start-server1": "react-scripts start",
+    "start-server2": "node ../node-app/server.js",
+    "start": "concurrently \"npm run start-server1\" \"npm run start-server2\"",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
